--with-libzip removed

--- a/che/php7.4/Dockerfile
+++ b/che/php7.4/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get -y update \
         zip \
     && docker-php-ext-configure intl \
     && docker-php-ext-install intl \
-    && docker-php-ext-configure zip --with-libzip \
+    && docker-php-ext-configure zip \
     && docker-php-ext-install zip mysqli pdo pdo_mysql \
     && chmod -R 777 /etc/apache2  /var/www /var/lib/apache2 /var/log \
     && chown -R www-data:www-data /var/www \
